[tool.poetry]
name = "meqtt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
gmqtt = "^0.6.12"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"


[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.2"

[tool.pytest.ini_options]
log_level = "DEBUG"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
